# pyA2L

./: .bumpversion.cfg  .codacy.yml  .codeclimate.yml  .coveragerc  .coveralls.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  MANIFEST.in  README.md  _setup.py  appveyor.yml  bandit.yml  build.cmd  build.py  build_ext.py  cmake_ext.py  install_antlr.py  ls-contributors.sh  pep517.json  pyproject.toml  reformat.cmd  requirements.test.txt  requirements.txt  setup.cfg  setup.py  tickets.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: pythonapp.yml  sdist.yml  testing.yml
antlr_cmake/: Antlr4Package.md  antlr4-generator.cmake.in
docs/: Makefile  README.rst  api_reference.rst  apidoc.sh  building.md  building.rst  conf.py  configuration.md  configuration.rst  faq.md  faq.rst  getting_started.md  getting_started.rst  howto.md  howto.rst  ifdata.rst  index.md  index.rst  installation.md  installation.rst  modules.md  modules.rst  pya2l.api.rst  pya2l.cgen.rst  pya2l.cgen.templates.rst  pya2l.model.rst  pya2l.rst  requirements.txt  tutorial.md  tutorial.rst
examples/: 310B621d.a2l  AMLTemplate.aml  ASAP2_Demo_V161.a2l  ASAP2_Demo_V161.aml  ASAP2_Demo_V161_ifdata_section.a2l  CCP.AML  Cummins_Extensions.aml  If_ccp4.a2l  VXAE5X3.A2L  XCP.aml  bypass.AML  ccpvision.aml  engine_ecu.a2l  etk.aml  example-a2l-file.a2l  if_kwp6.a2l  kwp2000.aml  mst_abs.a2l  slrt_xcp.aml  supp1_if.aml  supp_1.if.aml  uds.aml  vxcc0_etk.a2l  xcp.AML  xcp100.aml  xcp_aml_def.AML
pya2l/: __init__.py  a2l.g4  a2l.py  a2l_lexer.py  a2l_listener.py  a2l_parser.py  a2llg.g4  a2lparser.py  a2lparser_wrapper.cpp  allocprof.py  aml.g  aml.g4  aml.py  amlLexer.py  amlParser.py  aml_listener.py  aml_parser.cpp  amllib.py  amlparser_wrapper.cpp  buildGrammar.bat  buildGrammar.bat~  buildGrammar.sh  buildGrammar.sh~  buildGrammars.cmd  buildGrammars.sh  classes.py  cse_units.py  exceptions.py  functions.py  if_data_parser.cpp  if_data_parser.py  ifdata.py  logger.py  parserlib.py  parsers.py  preprocessor.cpp  preprocessor.hpp  preprocessor.py  preprocessor_wrapper.cpp  templates.py  (+3 more)
pya2l/aml/: aml_lexer.hpp  aml_parser.hpp  aml_visitor.cpp  aml_visitor.h  classes.py  db.py  ifdata_lexer.hpp  ifdata_lexer.py  ifdata_parser.py  klasses.hpp  listener.py  marshal.cpp  parser.cpp  parser.hpp  types.hpp  unmarshal.cpp  unmarshal.hpp
pya2l/api/: __init__.py  create.py  inspect.py  validate.py
pya2l/cgen/templates/: a2l.tmpl
pya2l/examples/: ASAP2_Demo_V161.a2l  damos_cat.py  etas.aml  ex01.py  ex02.py  ex03.py  ex04.py  ex_variants.py  ifdata_tester.py  parse_aml_tst.py  variants.a2l  vector.aml
pya2l/extensions/: a2l.tokens  a2lparser.cpp  a2lparser.hpp  a2ltoken.hpp  asam_types.hpp  ctre.hpp  exceptions.cpp  exceptions.hpp  gen_token_files.py  generator.cpp  generator.hpp  generator.txt  ifdata.hpp  keyword.hpp  line_map.hpp  line_numbers.hpp  logger.hpp  parameter.hpp  parser_table.hpp  preprocessor.hpp  regex.hpp  sysconsts.hpp  tempfile.hpp  token_stream.cpp  token_stream.hpp  token_type.hpp  tokenizer.cpp  tokenizer.hpp  tokenstream_wrapper.cpp  utils.hpp  valuecontainer.hpp
pya2l/extensions/FreeA2LParser/: FreeA2LParser.sln  FreeA2LParser.vcxproj  FreeA2LParser.vcxproj.filters  packages.config
pya2l/extensions/antlr4_runtime/: ANTLRErrorListener.cpp  ANTLRErrorListener.h  ANTLRErrorStrategy.cpp  ANTLRErrorStrategy.h  ANTLRFileStream.cpp  ANTLRFileStream.h  ANTLRInputStream.cpp  ANTLRInputStream.h  BailErrorStrategy.cpp  BailErrorStrategy.h  BaseErrorListener.cpp  BaseErrorListener.h  BufferedTokenStream.cpp  BufferedTokenStream.h  CharStream.h  CommonToken.cpp  CommonToken.h  CommonTokenFactory.cpp  CommonTokenFactory.h  CommonTokenStream.cpp  CommonTokenStream.h  ConsoleErrorListener.cpp  ConsoleErrorListener.h  DefaultErrorStrategy.cpp  DefaultErrorStrategy.h  DiagnosticErrorListener.cpp  DiagnosticErrorListener.h  Exceptions.cpp  Exceptions.h  FailedPredicateException.cpp  FailedPredicateException.h  FlatHashMap.h  FlatHashSet.h  InputMismatchException.cpp  InputMismatchException.h  IntStream.h  InterpreterRuleContext.cpp  InterpreterRuleContext.h  Lexer.cpp  Lexer.h  (+42 more)
pya2l/extensions/antlr4_runtime/atn/: ATN.cpp  ATN.h  ATNConfig.cpp  ATNConfig.h  ATNConfigSet.cpp  ATNConfigSet.h  ATNDeserializationOptions.cpp  ATNDeserializationOptions.h  ATNDeserializer.cpp  ATNDeserializer.h  ATNSimulator.cpp  ATNSimulator.h  ATNState.cpp  ATNState.h  ATNStateType.cpp  (+113 more)
pya2l/extensions/cmake/: .FindANTLR.cmake.swp  Antlr4Package.md
pya2l/extensions/spdlog/: logger.h
pya2l/imex/: __init__.py  a2l_exporter.py  json_exporter.py
pya2l/math/: __init__.py  math_fast.py  math_slow.py
pya2l/model/: __init__.py  mixins.py
pya2l/parser_test/: CMakeLists.txt  parser_test.cpp
pya2l/py2/: a2l.py  a2lLexer.py  a2lListener.py  a2lParser.py  amlLexer.py  amlLexer.tokens  amlListener.py  amlParser.py  amlVisitor.py
pya2l/py3/: a2l.py  a2l.tokens  a2lLexer.py  a2lLexer.tokens  a2lListener.py  a2lParser.py  a2lVisitor.py  amlLexer.py  amlLexer.tokens  amlListener.py  amlParser.py  amlVisitor.py
pya2l/scripts/: a2ldb_imex.py  benchmark.py
pya2l/tests/: __init__.py  clean_ifdata.a2l  conftest.py  multiple_ifdatas_per_line.a2l  notso_clean_ifdata.a2l  notso_clean_ifdata2.a2l  singleline_ifdata.a2l  testA2LAcceptance.py  testA2LComments.py  testAMLAcceptance.py  testCygpath.py  test_a2l_lexer.py  test_a2l_parser.py  test_aml_parser.py  test_api_create.py  test_api_inspect.py  test_cache_session.py  test_cse_units.py  test_cse_units_extra.py  test_exceptions.py  test_export_concurrency.py  test_export_symbol_link.py  test_formula_modes.py  test_functions.py  test_ifdata_parser.py  test_inspect_utils.py  test_math.py  test_open_existing.py  test_preproc.py  test_preprocessor.py  test_schema_migration.py  test_utils.py  test_validator.py  test_various.py
pya2l/tools/: createAML.py
scripts/: memory_benchmark.py  test_flush_simple.py  test_flush_strategies.py
(+89 files in other folders)
