[project]
name = "pya2ldb"
version = "1.0.345"
description = "A2L for Python"
readme = "docs/README.rst"
license = { text = "GPLv2" }
authors = [{ name = "Christoph Schueler", email = "cpu12.gems@googlemail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = [
    "chardet>=7.0.0",
    "Mako>=1.3.5",
    "SQLAlchemy>=2.0.30,<3",
    "numpy>=1.26.4,<3",
    "rich>=14.2,<16.0",
]

[project.optional-dependencies]
compute = ["scipy>=1.15.0", "numexpr>=2.14.1"]

[project.scripts]
a2ldb-imex = "pya2l.scripts.a2ldb_imex:main"

[project.urls]
Homepage = "https://github.com/christoph2/pyA2L"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pya2l"]

[tool.poetry]
name = "pya2ldb"
version = "1.0.345"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2,<10.0.0"
pre-commit = "^4.2.0"
bandit = "^1.7.8"
ruff = ">=0.15.13,<0.16"
isort = ">=6.0.1,<9.0.0"
flake8 = "^7.0.0"
black = ">=25.1,<27.0"
flake8-bugbear = ">=24.4.26,<26.0.0"
pre-commit-hooks = ">=5,<7"
pyupgrade = "^3.16.0"
pytest-cov = ">=6,<8"
mypy = ">=1.16,<3.0"
scipy = "^1.15.0"
numexpr = "^2.14.1"

[tool.bumpver]
current_version = "1.0.345"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false
ignore_remote_version = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"pya2l/version.py" = [
    '__version__ = "{version}"',
]
[build-system]
requires = ["scikit-build-core>=0.10", "pybind11[global]==2.13.6"]
build-backend = "scikit_build_core.build"


[tool.poetry.scripts]
a2ldb-imex = "pya2l.scripts.a2ldb_imex:main"

[tool.pytest.ini_options]
addopts = ["--tb=short"]
junit_family = "xunit2"
testpaths = ["pya2l/tests"]

[tool.flake8]
ignore = ["D203", "E203", "E266", "E501", "W503", "F403", "F401", "BLK100"]
exclude = '''
/(
    \.git
    | __pycache__
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.eggs
    | _build
    | build
    | __pypackages__
    | docs
    | dist
    | experimental
)/
'''
count = true
statistics = true
show-source = true
max-line-length = 132
select = ["B","C","E","F","W","T4","B9"]

[tool.black]
line-length=132
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | __pypackages__
    | build
    | docs
    | experimental
    | __pycache__
    | dist
)/
'''

[tool.isort]
profile = "black"
force_single_line = false
lines_after_imports = 2

[tool.mypy]
strict = false
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

# Auto-generated / ORM-heavy files — suppress noise
[[tool.mypy.overrides]]
module = [
    "pya2l.a2l",
    "pya2l.aml.aml_parser",
    "pya2l.aml.ifdata_lexer",
]
ignore_errors = true

# SQLAlchemy ORM column access is dynamic — suppress call-arg noise in creator
[[tool.mypy.overrides]]
module = "pya2l.api.create"
disable_error_code = ["call-arg", "attr-defined"]

# Declarative SQLAlchemy classes override __tablename__ dynamically.
# This produces false-positive "assignment" errors in mypy for this module.
[[tool.mypy.overrides]]
module = "pya2l.model.__init__"
disable_error_code = ["assignment"]

[tool.ruff]
target-version = "py312"
line-length = 132

[tool.ruff.lint]
ignore = ["I001"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"pya2l/examples/*" = ["F401", "F841", "E402", "E722", "F821", "F811"]
"scripts/*" = ["F401", "F841", "F541", "E402"]
"pya2l/functions.py" = ["E402"]
"pya2l/cse_units.py" = ["E402"]
"pya2l/api/validate.py" = ["E402"]
"pya2l/utils.py" = ["E402"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "pya2l/examples", "pya2l/build"]
# Broad skips removed — per-site suppressions use inline # nosec annotations instead

[tool.cibuildwheel]
#test-command = "pya2l {package}/tests"

build = "cp3{10,11,12,13,14,15}-*"
skip = ["*_i686", "*-musllinux*"]
build-frontend = "build"
